updated ghaction-github-pages action version

--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -21,15 +21,15 @@ jobs:
       - name: Build
         run: npm run build
       - name: Check GH Pages Status
-        uses: crazy-max/ghaction-github-status@v3
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           pages_threshold: major_outage
       - name: Deploy to Github Pages
         if: success()
-        uses: crazy-max/ghaction-github-pages@v3
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: site
-          build_dir: build
+          build_dir: _static
           jekyll: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
